// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  HI 😀 😎 There 
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots ColorScaleLegend simple scale 1`] = `
<div
  className="ColorScaleLegend"
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="block"
  >
    <div
      className="label"
    >
      0%
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 204)",
          "height": "50px",
          "width": "50px",
        }
      }
    />
  </div>
  <div
    className="block"
  >
    <div
      className="label"
    >
      20%
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgb(254, 224, 135)",
          "height": "50px",
          "width": "50px",
        }
      }
    />
  </div>
  <div
    className="block"
  >
    <div
      className="label"
    >
      40%
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgb(254, 171, 75)",
          "height": "50px",
          "width": "50px",
        }
      }
    />
  </div>
  <div
    className="block"
  >
    <div
      className="label"
    >
      60%
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgb(250, 92, 46)",
          "height": "50px",
          "width": "50px",
        }
      }
    />
  </div>
  <div
    className="block"
  >
    <div
      className="label"
    >
      80%
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgb(211, 17, 33)",
          "height": "50px",
          "width": "50px",
        }
      }
    />
  </div>
  <div
    className="block"
  >
    <div
      className="label"
    >
      100%
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgb(128, 0, 38)",
          "height": "50px",
          "width": "50px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map empty 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    height="500"
    width="950"
  >
    <text
      transform="translate(50,50)"
    >
      Loading
    </text>
  </svg>
</div>
`;

exports[`Storyshots Map populated 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    height="500"
    width="950"
  >
    <g
      className="Map"
    />
  </svg>
</div>
`;

exports[`Storyshots Tooltip empty 1`] = `
<div
  className="Tooltip"
  id="tooltip"
  style={
    Object {
      "display": "none",
    }
  }
/>
`;

exports[`Storyshots ZoomableGroup with no children 1`] = `
<svg
  className="ZoomableGroup"
  height={undefined}
  width={undefined}
>
  <g
    transform="translate(0 0) scale(1)"
  />
</svg>
`;

exports[`Storyshots ZoomableGroup with one Map 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    className="ZoomableGroup"
    height="500"
    width="1000"
  >
    <g
      transform="translate(0 0) scale(1)"
    >
      <g
        className="Map"
      />
    </g>
  </svg>
</div>
`;
